--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AR app for aquinos group",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
