--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.1.15",
     "nunjucks": "^3.2.2"
   },
   "devDependencies": {
