--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-device": "^0.4.2",
     "google-spreadsheet": "^3.1.15",
     "nunjucks": "^3.2.2"
   },
