--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-device": "^0.4.2",
     "google-spreadsheet": "^3.1.15",
-    "nunjucks": "^3.2.2"
+    "nunjucks": "^3.2.2",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
